integration de la premiere section

--- a/index.html
+++ b/index.html
@@ -21,6 +21,17 @@
             <a href="#" class="contact active">Contact</a>
         </nav>
     </header>
+    <section class="head">
+        <div class="">
+            <img class="headimg" src="assets/image0-1.jpeg" alt="salon">
+        </div>
+        <div class="headtxt">
+            <h2>Bienvenue <br>chez Kilife BarberShop,</h2>
+            <p>La barbière qui rend hommage aux hommes <br> qui prennent soin d'eux. Une <br> expérience dans une atmosphère <br> cosy ou l'on peut se <br> ressourcer.
+            </p>
+            <div class="what"><i class="fa-brands fa-whatsapp"></i>Whatsapp</div>
+        </div>
+    </section>
 </body>
 
 </html>
