--- a/artefact.html
+++ b/artefact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document 10</title>
+    <header> <menu> <bouton> home</bouton> <bouton> hello</bouton> <bouton> cours</bouton></menu></header>
 </head>
 <body>
     
